--- a/app/src/main/res/layout/custom_plan_list.xml
+++ b/app/src/main/res/layout/custom_plan_list.xml
@@ -9,6 +9,10 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <view
+        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
