--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -11,23 +11,36 @@
         android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+
         <TextView
+            android:id="@+id/button_group_title"
             android:textColor="@color/colorFocusBottomMenu"
-            android:textSize="24dp"
-            android:text="내 여행 그룹"
+            android:textSize="20dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:text="여행그룹"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"/>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <Button
+            android:id="@+id/colorFocusBottomMenu"
             android:backgroundTint="@color/colorFocusBottomMenu"
-            android:background="@drawable/ic_add_black_24dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="48dp"
-            android:layout_height="48dp"/>
+            android:background="@drawable/ic_add_black_24dp"
+            android:layout_width="26dp"
+            android:layout_height="26dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:text="임시 그룹으로 이동"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <ListView
         android:layout_width="match_parent"
