--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,12 +47,14 @@
             android:layout_width="80dp"
             android:layout_height="80dp"/>
         <TextView
+            android:id="@+id/today_weather_description"
             android:textAlignment="center"
             android:textSize="20dp"
             android:text="맑음"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/today_weather_place_temp"
             android:textAlignment="center"
             android:textSize="40dp"
             android:text="20℃"
@@ -60,18 +62,21 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="10dp"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
         android:elevation="4dp"
         android:background="@drawable/home_box_style"
-        android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
-
+            android:id="@+id/layout_tomorrow"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/weather_line"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="10dp"
             android:layout_width="wrap_content"
@@ -95,7 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/tomorrow_weather_am"
+                    android:id="@+id/tomorrow_weather_min"
                     android:textSize="16dp"
                     android:textColor="#0000FF"
                     android:layout_marginHorizontal="5dp"
@@ -103,7 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/tomorrow_weather_pm"
+                    android:id="@+id/tomorrow_weather_max"
                     android:textSize="16dp"
                     android:textColor="#FF0000"
                     android:layout_marginHorizontal="5dp"
@@ -113,13 +118,22 @@
             </LinearLayout>
         </LinearLayout>
         <View
-            android:layout_marginVertical="20dp"
+            android:id="@+id/weather_line"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/layout_day_after_tomorrow"
+            app:layout_constraintLeft_toRightOf="@+id/layout_tomorrow"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_height="20dp"
             android:background="#CDCDCD"/>
         <LinearLayout
+            android:id="@+id/layout_day_after_tomorrow"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/weather_line"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -142,7 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/day_after_tomorrow_weather_am"
+                    android:id="@+id/day_after_tomorrow_weather_min"
                     android:textSize="16dp"
                     android:textColor="#00F"
                     android:layout_marginHorizontal="5dp"
@@ -150,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/day_after_tomorrow_weather_pm"
+                    android:id="@+id/day_after_tomorrow_weather_max"
                     android:textSize="16dp"
                     android:textColor="#F00"
                     android:layout_marginHorizontal="5dp"
@@ -159,7 +173,7 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
