--- a/app/src/main/res/drawable/home_box_style.xml
+++ b/app/src/main/res/drawable/home_box_style.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:right="3dp"
-        android:bottom="3dp">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#CCC">
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#EEE" />
             <corners android:radius="30dp"/>
         </shape>
     </item>
-</layer-list>
+
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="90"
+                android:endColor="@android:color/white"
+                android:startColor="@android:color/white"
+                android:type="linear" />
+
+            <corners android:radius="30dp"/>
+        </shape>
+    </item>
+</ripple>
+
+
 
 
 
