--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -11,4 +11,22 @@
         <item>카페</item>
         <item>식사</item>
     </string-array>
+    <string-array name="country">
+        <item>오스트레일리아</item>
+        <item>브라질</item>
+        <item>캐나다</item>
+        <item>스위스</item>
+        <item>중국</item>
+        <item>유럽</item>
+        <item>영국</item>
+        <item>홍콩</item>
+        <item>인도</item>
+        <item>일본</item>
+        <item>멕시코</item>
+        <item>러시아</item>
+        <item>태국</item>
+        <item>대만</item>
+        <item>미국</item>
+        <item>배트남</item>
+    </string-array>
 </resources>
