--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -183,7 +183,7 @@
         android:layout_marginHorizontal="20dp"
         android:elevation="4dp"
         android:background="@drawable/home_box_style"
-        android:clickable="false"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -193,7 +193,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/ic_jpy"
+            android:src="@drawable/ic_flag_cny"
             android:background="@drawable/home_box_style"
             android:layout_width="64dp"
             android:layout_height="64dp"/>
