--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -177,7 +177,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/exchange_button"
-        android:padding="20dp"
+        android:padding="10dp"
         android:overScrollMode="never"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="20dp"
@@ -220,7 +220,7 @@
 
         <TextView
             android:id="@+id/exchange_country_cost"
-            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
             android:text="1024JPY"
             android:textSize="24dp"
             app:layout_constraintRight_toRightOf="parent"
