--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".profile">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="@color/colorFocusBottomMenu"
+                android:textSize="20dp"
+                android:text="사용자"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/profile_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:background="#DDD"
+                android:layout_width="64dp"
+                android:layout_height="64dp"/>
+            <TextView
+                android:id="@+id/profile_nickname"
+                android:paddingHorizontal="20dp"
+                android:textSize="18dp"
+                android:text="닉네임"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/profile_image"
+                app:layout_constraintLeft_toRightOf="@+id/profile_image"/>
+            <TextView
+                android:id="@+id/profile_id"
+                android:textSize="12dp"
+                android:paddingHorizontal="20dp"
+                android:text="myid1234"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/profile_nickname"
+                app:layout_constraintLeft_toRightOf="@+id/profile_image"/>
+            <TextView
+                android:id="@+id/profile_regdate"
+                android:textSize="12dp"
+                android:paddingHorizontal="20dp"
+                android:text="가입일 : 2020년 08월 10일"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/profile_image"
+                app:layout_constraintLeft_toRightOf="@+id/profile_image"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:background="@drawable/profile_box_outside_style"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="20dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textColor="#000"
+                android:text="내 정보"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="프로필 이미지 변경"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="닉네임 변경"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="비밀번호 변경"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="로그아웃"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="회원 탈퇴"
+                android:textColor="#F44"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="@drawable/profile_box_outside_style"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="20dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textColor="#000"
+                android:text="앱 정보"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:background="@drawable/profile_box_inside_style"
+                android:clickable="true"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="앱 버전"
+                    android:textSize="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="개발중"
+                    android:textSize="12dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <TextView
+                android:text="평가하기"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="개인정보 처리방침"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:text="오픈소스 라이선스"
+                android:background="@drawable/profile_box_inside_style"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:textSize="16dp"
+                android:clickable="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <View
+            android:background="@drawable/profile_box_outside_style"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"></View>
+
+    </LinearLayout>
+</ScrollView>
