--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -233,9 +233,10 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
+            android:padding="15dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/goto_login"
-            android:layout_margin="10dp"
-            android:padding="20dp"
             android:elevation="4dp"
             android:background="@drawable/home_box_style"
             android:layout_gravity="center"
