--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,84 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/login_Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="트립 플래너"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/edit_uid"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="60dp"
-        />
+        android:text="Trip Planner"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toTopOf="@id/login_uid"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edit_uid"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/userid"
-            android:hint="아이디"
-            android:inputType="text"
-            android:paddingLeft="70dp"
-            app:layout_constraintBottom_toTopOf="@id/edit_password"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_Title"
-            />
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/login_uid"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/userid"
+        android:hint="아이디"
+        android:inputType="text"
+        android:paddingLeft="70dp"
+        app:layout_constraintBottom_toTopOf="@id/login_password"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_Title" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edit_password"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginVertical="30dp"
-            android:background="@drawable/password"
-            android:hint="비밀번호"
-            android:inputType="textPassword"
-            android:paddingLeft="70dp"
-            app:layout_constraintLeft_toLeftOf="@id/edit_uid"
-            app:layout_constraintRight_toRightOf="@id/edit_uid"
-            app:layout_constraintTop_toBottomOf="@+id/edit_uid" />
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/login_password"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/password"
+        android:hint="비밀번호"
+        android:inputType="textPassword"
+        android:paddingLeft="70dp"
+        app:layout_constraintLeft_toLeftOf="@id/login_uid"
+        app:layout_constraintRight_toRightOf="@id/login_uid"
+        app:layout_constraintTop_toBottomOf="@+id/login_uid" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_login"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginVertical="30dp"
-            android:text="로그인"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintLeft_toLeftOf="@id/edit_uid"
-            app:layout_constraintRight_toRightOf="@id/edit_uid"
-            app:layout_constraintTop_toBottomOf="@id/edit_password" />
-
-        <TextView
-            android:id="@+id/login_text1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="아직 회원이 아니신가요?"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintTop_toBottomOf="@id/button_login"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:gravity="center"
-            android:layout_marginTop="60dp"
-             />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_login"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/login_box_style"
+        android:text="로그인"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#FFFFFF"
+        app:layout_constraintLeft_toLeftOf="@id/login_uid"
+        app:layout_constraintRight_toRightOf="@id/login_uid"
+        app:layout_constraintTop_toBottomOf="@id/login_password" />
 
     <TextView
-        android:id="@+id/textView_signup"
+        android:id="@+id/login_text1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:text="아직 회원이 아니신가요?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_login" />
+
+    <TextView
+        android:id="@+id/login_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="회원가입"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
@@ -86,37 +88,45 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_text1" />
 
-        <TextView
-            android:id="@+id/login_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아이디 / 비밀번호를 잊어버렸나요?"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintTop_toBottomOf="@id/textView_signup"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="20dp"/>
-
     <TextView
-        android:id="@+id/findUserId"
+        android:id="@+id/login_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="아이디 / 비밀번호를 잊어버렸나요?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_signup" />
+
+    <TextView
+        android:id="@+id/login_find_uid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="아이디찾기"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/findUserPwd"
+        app:layout_constraintRight_toLeftOf="@id/login_find_password"
         app:layout_constraintTop_toBottomOf="@id/login_text2" />
 
     <TextView
-        android:id="@+id/findUserPwd"
+        android:id="@+id/login_find_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/custom_button"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="비밀번호 찾기"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
-        app:layout_constraintLeft_toRightOf="@id/findUserId"
+        app:layout_constraintLeft_toRightOf="@id/login_find_uid"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_text2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
