--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".groupList">
+    tools:context=".GroupListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingHorizontal="20dp"
