--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -8,7 +8,8 @@
     tools:context=".GroupMainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/colorTopNavigationBack"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
@@ -16,9 +17,6 @@
             android:backgroundTint="@color/colorFocusBottomMenu"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
             android:background="@drawable/ic_arrow_back_black_24dp"
             android:layout_width="26dp"
             android:layout_height="26dp"/>
@@ -27,8 +25,6 @@
             android:textColor="@color/colorFocusBottomMenu"
             android:textSize="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
             android:text="방 제목"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,32 +34,47 @@
         <Button
             android:id="@+id/button_group_setting"
             android:backgroundTint="@color/colorFocusBottomMenu"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:background="@drawable/ic_settings_black_24dp"
             android:layout_width="26dp"
             android:layout_height="26dp"/>
+
         <Button
             android:id="@+id/button_group_chat"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/colorFocusBottomMenu"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/button_group_setting"
             android:background="@drawable/ic_chat_black_24dp"
             android:layout_width="26dp"
             android:layout_height="26dp"/>
+        <TextView
+            android:textColor="#FFF"
+            android:background="@drawable/round_style"
+            app:layout_constraintTop_toTopOf="@id/button_group_chat"
+            app:layout_constraintLeft_toRightOf="@id/button_group_chat"
+            android:layout_width="10dp"
+            android:layout_height="10dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-    </ScrollView>
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </ScrollView>
+        <Button
+            android:id="@+id/button_group_plan_add"
+            android:backgroundTint="@color/colorBlurBottomMenu"
+            android:background="@drawable/ic_add_circle_outline_black_24dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
