--- a/app/src/main/res/layout/activity_find_id_pw.xml
+++ b/app/src/main/res/layout/activity_find_id_pw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindIdPwActivity">
+    tools:context=".activity.FindIdPwActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_find_idpw"
