--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupMainActivity">
+    tools:context=".activity.GroupMainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingHorizontal="20dp"
