--- a/app/src/main/res/layout/activity_group_setting.xml
+++ b/app/src/main/res/layout/activity_group_setting.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupSettingActivity">
+    tools:context=".activity.GroupSettingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/colorTopNavigationBack"
