--- a/app/src/main/res/layout/fragment_find_pw.xml
+++ b/app/src/main/res/layout/fragment_find_pw.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindPwFragment">
+    tools:context=".fragment.FindPwFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
